{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 16,
  "lineage": "f9c2c840-395d-d09e-1572-6b6728d8ed02",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699970018815:security-group/sg-0841c4d1f0ff70f7e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0841c4d1f0ff70f7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20231230005451135800000001",
            "name_prefix": "terraform-",
            "owner_id": "699970018815",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0290179c45627d575"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699970018815:security-group/sg-04580d5eef6fa8edc",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04580d5eef6fa8edc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0841c4d1f0ff70f7e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wordpress-db-20231230005453262500000002",
            "name_prefix": "wordpress-db-",
            "owner_id": "699970018815",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0290179c45627d575"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_sg"
          ]
        }
      ]
    }
  ]
}